app/css/life-of-joyce.css
@import './variable.css';

/* main - section 1: hero */
section[aria-label="Life of James Joyce hero"] {
    position:relative;
}

section[aria-label="Life of James Joyce hero"] img{
    display: block;
    width: 100%;
    height: auto;
    margin-bottom: var(--sp-xl);
}
section[aria-label="Life of James Joyce hero"] h1{
    position: absolute;
    top: 18%;
    left: 8%;
    font-size: var(--fs-h2);
}

/* main - section 2: Quotes */
section[aria-label="Quotes from James Joyce"]{
    padding: 5rem 5rem;
}
section[aria-label="Quotes from James Joyce"] img:first-of-type{
    display: block;
    width: 4rem;
    height: auto;
    margin-right: auto;
    margin-bottom: var(--sp-lg);
}
section[aria-label="Quotes from James Joyce"] img:last-of-type{
    display: block;
    width: 4rem;
    height: auto;
    transform: rotate(180deg);
    margin-left: auto;
    margin-top: var(--sp-lg);
}
section[aria-label="Quotes from James Joyce"] p:first-of-type{
    font-size: var(--fs-h4);
    font-weight: var(--fw-bold);
    padding: 0 7rem;
    text-align: center;
}
section[aria-label="Quotes from James Joyce"] p:last-of-type{
    font-size: var(--fs-body);
    margin-top: var(--sp-xl);
    padding: 0 7rem;
    text-align: right;
}

/* main - section 3: about Dubliners */
section[aria-label="All About Dubliners"] {
    display: grid;
    grid-template-columns: 2fr 1fr; /* !!change this to 1fr in mobile mode */
    gap: var(--sp-2xl);
}

section[aria-label="All About Dubliners"] h2{
    font-size: var(--fs-h2);
}
section[aria-label="All About Dubliners"] hgroup > p{
    font-size: var(--fs-h6);
    font-weight: var(--fw-bold);
    margin-bottom: var(--sp-xl);
}
section[aria-label="All About Dubliners"] div > p{
    font-size: var(--fs-body);
    margin-bottom: var(--sp-xl);
}
section[aria-label="All About Dubliners"] div:last-of-type{
    justify-self:end;
}
section[aria-label="All About Dubliners"] img{
    display: block;
}

/* main - section 4: Works by James Joyce */
section[aria-label="Works by James Joyce"] h2{
    font-size: var(--fs-h6);
    text-align: center;
    margin-bottom: var(--sp-lg);
    margin-top:var(--sp-3xl);
}
section[aria-label="Works by James Joyce"] hgroup p{
    font-size: var(--fs-h3);
    font-weight: var(--fw-bold);
    text-align: center;
    margin-bottom: var(--sp-xl);
}
section[aria-label="Works by James Joyce"] ul{
    list-style: none;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: var(--sp-xl);
}
section[aria-label="Works by James Joyce"] article{
    position: relative;
    aspect-ratio: 3 / 4;
    overflow: hidden;
}
section[aria-label="Works by James Joyce"] article img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: block;
}
section[aria-label="Works by James Joyce"] article div{
    position: absolute;
    top: 0;
    left: 50%;
    transform: translateX(-50%);
    width: 100%;
    height: 100%;
    padding: 3rem 1rem;
    display: flex;
    flex-direction: column;
    gap: var(--sp-xl);
}
section[aria-label="Works by James Joyce"] h3{
    font-size: var(--fs-h5);
    font-weight: var(--fw-bold);
    color: black;
    text-align:center;
}
section[aria-label="Works by James Joyce"] p{
    font-size: var(--fs-p);
    color: black;
    text-align:center;
}
section[aria-label="Works by James Joyce"] article a{
    display:block;
    position:absolute;
    left:50%;
    transform:translateX(-50%);
    bottom: 10%;
    width: 80%;
}

